# goit-pythonweb-hw-01

./: pyproject.toml  task_1.py  task_2.py
